--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "now-start": "PRIVATE_KEY=$(echo $PRIVATE_KEY_BASE64 | base64 -d) npm start"
   },
   "dependencies": {
+    "js-yaml": "^3.11.0",
     "probot": "git+https://github.com/jnewland/probot#8ff179b70ec6cb4762cda9c3e15217ea29645b1b",
     "raven": "^2.6.2"
   },
