--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "js-yaml": "^3.11.0",
-    "probot": "git+https://github.com/jnewland/probot#46a5c9a8741716640d9e275d193d53ac2de89320",
+    "probot": "^7.3.1",
     "raven": "^2.6.2"
   },
   "devDependencies": {
